Rough working.  Layout issues with portfolio.html.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,37 +23,16 @@ body{
   height: 50px;
 }
 
-header{
-    z-index: 2;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 80px;
-    margin-left: 0px;    
-    background-color: #ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    border-bottom: slategrey solid;
-    border-width: 0.5px;
-}
-
 footer{
-    clear: both;
-    position: relative;
-    left: 0px;
-    right: 0px;
-    top: 50px;
-    width: 100%;
-    height: 50px;
     color: #ffffff;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
-    border-width: 8.0px;
+    /* border-width: 8.0px; */
     vertical-align: text-bottom;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 9px;
-}
+} */
 
 input[type=text], textarea {
     width:95%;
@@ -63,7 +42,7 @@ input[type=text], textarea {
     resize: vertical;
   }
 
-  input[type=submit] {
+input[type=submit] {
     width: auto;
     background-color: #4aaaa5;
     color: white;
@@ -76,45 +55,23 @@ input[type=text], textarea {
 
 .headings{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 20px;
 }
 
 img{
-    float: left;
-    padding-right: 20px;
-    padding-bottom: 0px;
+    margin-bottom: 10px;
 }
 
-.headerbox{
-    box-sizing: border-box;
-    margin-left: auto;
-    margin-right: auto;
-    height: 80px;
-    width: 960px;
-
-    border-color: black;
-    border-width: 1px;
-    z-index: 1;
-}    
-
 .nameheader{
-    /* position: relative;
-    float: left;
-    top: 0px;
-    left: -20px; */
-    width: 250px;
-    height: 80px;
-    padding-left: 10px;
+    margin-left: 10%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 12px;
-    color: #ffffff;
-    background-color: #4aaaa5;
+    color: 4aaa5;
+    /* background-color: #4aaaa5; */
 }
 
 .navlinks{
-    position: relative;
-    float: right;
-    top: 30px;
-    width: 200px;
-    height: 80px;
+    margin-right: 10%;
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
 }
@@ -156,15 +113,17 @@ textarea:focus{
     border-width: 0.5px; */
 }
 
-.section_header{
-    height: 50px;
+.section{
+    /* height: 50px;
     margin-left: 20px;
-    margin-right: 20px;
-    color: #4aaaa5;
+    margin-right: 20px; */
+    background-color: #4aaaa5;
 }
 
 #thingreyline{
-    width: 910px;
+    width: auto;
+    margin-left: 20px;
+    margin-right: 20px;
     height: 2px;
     background-color: slategrey;
 }
@@ -218,20 +177,21 @@ textarea:focus{
 
 .portfolio-app-descriptor{
     display: block;
-    position: relative;
+    /* position: relative;
     top: 180px;
-    left: 0px;
-    width: 240px;
+    left: 0px; */
+    width: 100px;
     height: 50px;
     color: #ffffff;
     background-color: #4aaaa5;
+    z-index: 1;
 }
 
 .app-descriptor-text{
     display: block;
     position: relative;
     top: -45px;
-    width: 240px;
+    width: 100px;
     height: 50px;
     color: #ffffff;
     z-index: 1;
